# remote-runner

./: CMakeLists.txt  README.md  build-x64.bat
cmake/: GenerateTargetTriplet.cmake
src/: CMakeLists.txt  main.cpp  version.h.in
src/interfaces/: iprocessor.h  iserver_engine.h
src/processor/: processor.cpp  processor.h
src/remote_runner/: remote_runner.cpp  remote_runner.h
src/server/: connection.cpp  connection.h  listener.cpp  listener.h  newtork_initializer.cpp  newtork_initializer.h  select_base_server_engine.h  tcp_server.cpp  tcp_server.h
src/tools/: delegate.h
src/tools/cash_timer/: cash_timer.cpp  cash_timer.h
src/tools/locker/: spinlock_mutex.cpp  spinlock_mutex.h
src/tools/logger/: ilogger.h  mt_logger.cpp  mt_logger.h
src/tools/thread/: runnable.cpp  runnable.h
tests/: CMakeLists.txt
